syntax = "proto3";

package com.trading.proto;

option java_package = "com.trading.proto";

service PerformanceService {
  rpc GetPerformance (PerformanceRequest) returns (PerformanceResponse);
}

message PerformanceRequest {
  string service_name = 1;
}

message PerformanceResponse {
  int32 totalThreads = 1;
  int32 runningThreads = 2;
  int32 peakThreads = 3;
  int64 heapMemoryUsage = 4;
  int64 nonHeapMemoryUsage = 5;
  double systemLoad = 6;
}
